<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:andeoid="http://schemas.android.com/tools">

    <!-- Menu Item: Aichat -->
    <item
        android:id="@+id/menu_aichat"
        android:title="@string/aichat"
        android:icon="@drawable/ic_forum"
        app:showAsAction="ifRoom" />

    <!-- Menu Item: Camera -->
    <item
        android:id="@+id/menu_camera"
        android:title="@string/camera"
        android:icon="@drawable/ic_camera"
        app:showAsAction="ifRoom" />

    <!-- Menu Item: Profile -->
    <item
        android:id="@+id/menu_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        app:showAsAction="ifRoom" />

</menu>
